Finished first pass of modifying SweaveDrivers.R for RTF
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@13 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/RTF/rtfSweave-source.Rnw
+++ b/RTF/rtfSweave-source.Rnw
@@ -1026,7 +1026,7 @@ if (options$fig && options$eval) {
 
 It's here that I include the graphics. The canonical way to
 include graphics in an RTF file is to use the the \code{\textbackslash pict} tag
-with \code{\textbackslash pngblib},
+with \code{\textbackslash pngblip},
 \code{\textbackslash jpegblip}, or \code{\textbackslash emfblip} followed
 by a hex representation of the image binary. This would look like this.
 
