Update to reflect latest version of SweaveDrivers.R in R and edit ChangeLog
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@29 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/RTF/ChangeLog
+++ b/RTF/ChangeLog
@@ -1,3 +1,8 @@
+2015-04-03  Stephen Weigand  <Weigand.Stephen@mayo.edu>
+
+	* rtfSweaveDriver.R (RweaveRtfWritedoc): Added 'domain = NA' in stop(...
+	so that it reflected changes made in r68088 of SweaveDriver.R.
+
 2014-12-08    <weigand@R5018923>
 
 	* test1.Rrtf: This is an example file similar
