Updated ChangeLog, added newline at end of testOptions.Rrtf and added this file
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@36 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/RTF/ChangeLog
+++ b/RTF/ChangeLog
@@ -1,3 +1,9 @@
+2015-04-06  Stephen Weigand  <Weigand.Stephen@mayo.edu>
+
+	* rtfSweaveDriver.R: I added my name as part of the
+	top comment lines of the file. I will next copy this
+	to pkg/rtfSweave/R.
+
 2015-04-03  Stephen Weigand  <Weigand.Stephen@mayo.edu>
 
 	* rtfSweaveDriver.R (RweaveRtfWritedoc): Added 'domain = NA' in stop(...
