--- a/pkg/rtfSweave/ChangeLog
+++ b/pkg/rtfSweave/ChangeLog
@@ -1,5 +1,8 @@
 2015-04-07  Stephen Weigand  <Weigand.Stephen@mayo.edu>
 
+	* 'vignette' changed to 'vignettes' with
+	   shell> svn move vignette vignettes
+	   but 
 	* vignette/rtfSweave-intro.pdf was added.
 
 2015-04-03  Stephen Weigand  <Weigand.Stephen@mayo.edu>
