Added notes about SweaveInput
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@58 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/README
+++ b/pkg/rtfSweave/README
@@ -34,3 +34,11 @@ Some notes I am keeping concerning packaging rtfSweave
   [13] "SweaveSyntaxNoweb"         "SweaveSyntConv"           
 
   It does not appear to export 'SweaveParseOptions' which I need.
+
+
+* SweaveInput
+  Note that \SweaveInput <file> does not want quotes around
+  the filename and the file has to be in the current directory
+  or a subdirecty. For example:
+  {\SweaveInput header}
+  {\SweaveInput ./subdir/header}
