Documented \SweaveInput fix
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@59 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/ChangeLog
+++ b/pkg/rtfSweave/ChangeLog
@@ -1,3 +1,9 @@
+2015-04-13  Stephen Weigand  <Weigand.Stephen@mayo.edu>
+
+	* Fixed but in \SweaveInput which required
+	\SweaveInput{<filename_sans_ext>} rather than
+	{\SweaveInput <filename_sans_ext>}
+
 2015-04-07  Stephen Weigand  <Weigand.Stephen@mayo.edu>
 
 	* 'vignette' changed to 'vignettes' with
