Documented options 'rtf.Sinput' and 'rtf.Soutput' implementation
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@64 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/ChangeLog
+++ b/pkg/rtfSweave/ChangeLog
@@ -1,3 +1,11 @@
+2015-12-31  Stephen Weigand  <Weigand.Stephen@mayo.edu>
+
+	* R/rtfSweaveDriver.R (RweaveRtfSetup): Added options named
+	'rtf.Sinput' and 'rtf.Soutput' which are strings of paragraph
+	formatting commands for the R code and the R output.
+	(makeRweaveRtfCodeRunner): now pulling 'options$rtf.Sinput'
+
+
 2015-04-13  Stephen Weigand  <Weigand.Stephen@mayo.edu>
 
 	* Fixed but in \SweaveInput which required
