--- a/pkg/rtfSweave/vignettes/rtfSweave-intro.Rnw
+++ b/pkg/rtfSweave/vignettes/rtfSweave-intro.Rnw
@@ -14,6 +14,8 @@
 \title{An introduction to RTF and the \pkg{rtfSweave} package}
 \author{Stephen Weigand \texttt{weigand@mayo.edu}}
 
+%\VignetteIndexEntry{Introduction to rtfSweave}
+
 \begin{document}
 \maketitle
 \tableofcontents
