Show 'render_rtf' changes
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@87 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/ChangeLog
+++ b/pkg/rtfSweave/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-23  Stephen Weigand  <Weigand.Stephen@mayo.edu>
+
+	* R/render_rtf.R Added to provide RTF-based hoooks for knitr
+	* man/render_rtf.Rd Documented 'render_rtf()'
+
 2016-01-01  Stephen Weigand  <Weigand.Stephen@mayo.edu>
 
 	* R/rtfSweaveDriver.R (RweaveRtfSetup): Added option named
