Documented 'rtf.options' addition and changed line endings
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/rtfsweave@91 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/rtfSweave/ChangeLog
+++ b/pkg/rtfSweave/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-26  Stephen Weigand  <Weigand.Stephen@mayo.edu>
+
+	* R/rtf.options.R added to control options
+	* R/rtf.options.Rd docmenting functionality
+
 2016-12-23  Stephen Weigand  <Weigand.Stephen@mayo.edu>
 
 	* R/render_rtf.R Added to provide RTF-based hoooks for knitr
